# steam-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-mcp-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md  01-RESEARCH.md
.planning/phases/02-infrastructure-layer/: 02-RESEARCH.md
.planning/phases/03-commercial-data/: 03-02-SUMMARY.md
.planning/phases/04-engagement-data/: 04-05-PLAN.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/milestone-uat/: milestone-uat-01-PLAN.md  milestone-uat-01-SUMMARY.md  milestone-uat-02-PLAN.md  milestone-uat-02-SUMMARY.md  milestone-uat-VERIFICATION.md  v1.1-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: __init__.py  analytics.py  cache.py  config.py  http_client.py  logging_config.py  market_tools.py  rate_limiter.py  schemas.py  server.py  steam_api.py  timeout_utils.py  tools.py
tests/: conftest.py  test_analytics.py  test_cache.py  test_commercial.py  test_config.py  test_engagement.py  test_enrichment.py  test_http_client.py  test_integration.py  test_market_integration.py  test_market_tools.py  test_rate_limiter.py  test_reviews.py  test_schemas.py  test_steam_api.py  test_steam_store_search.py  test_tools.py
